<resources>
    <string name="app_name">CustomLocation</string>
    <string name="text_read_contact">读取联系人</string>
    <string name="text_read">读写权限</string>
    <string name="permission_get">权限提示</string>
    <string name="permission_desc">亲：为了更好的使用此应用，请同意一下权限</string>
    <string name="text_default">默认</string>
    <string name="text_contact">通讯录</string>
    <string name="map_key">4ac069605903d4ad156ea3c42b3288a5</string>
    <string name="text_location">定位</string>
    <string name="text_start">开始定位</string>
    <string name="text_stop">停止定位</string>
    <string name="text_mine">我的</string>
    <string name="text_home">主页</string>
    <string name="text_load">加载</string>
    <string name="text_login">登录</string>
    <string name="text_no_account">还没有账号?</string>
    <string name="text_register">注册</string>
    <string name="text_hint_password">请输入密码</string>
    <string name="text_hint_account">请输入用户名</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_user_info">用户信息</string>
    <string name="text_nick_name">昵称</string>
    <string name="text_finish">完成</string>
    <string name="text_cancel">取消</string>
    <string name="text_take_photo">拍照</string>
    <string name="text_album">相册</string>
    <string name="text_add_photo">添加照片</string>
    <string name="text_empty">这是一个空布局</string>
</resources>
