<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/lyt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/text_bg_corner"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/text_add_photo"
            android:textColor="@color/colorGray"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGrayLight" />

        <TextView
            android:id="@+id/txt_dialog_photo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/text_album"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGrayLight" />

        <TextView
            android:id="@+id/txt_dialog_camera"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/text_take_photo"
            android:textColor="@color/colorBlue"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/text_bg_corner"
        android:gravity="center"
        android:text="@string/text_cancel"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />


</LinearLayout>