<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.yk.silence.toolbar.CustomTitleBar
        android:id="@+id/title_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        app:layout_constraintTop_toTopOf="parent"
        app:leftTextColor="@color/colorWhite"
        app:leftTextSize="@dimen/sp_14"
        app:leftTitle="@string/text_login"
        app:rightTextColor="@color/colorWhite"
        app:rightTextSize="@dimen/sp_14"
        app:rightTitle="@string/text_register" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_login_logo"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_52"
        android:text="@string/text_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_login" />


    <RelativeLayout
        android:id="@+id/ryt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_30"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/img_login_logo">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:src="@drawable/login_user_normal" />

        <com.silence.customlocation.ui.edittext.ClearWriteEditText
            android:id="@+id/edt_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_46"
            android:background="@null"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/text_hint_account"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/sp_16" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ryt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_23"
        android:layout_marginEnd="@dimen/dp_30"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ryt_login">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:src="@drawable/login_psw_normal" />

        <com.silence.customlocation.ui.edittext.ClearWriteEditText
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_46"
            android:background="@null"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/text_hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/sp_16" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_30"
        android:background="@color/colorBlue"
        android:text="@string/text_login"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@+id/ryt_register" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_38"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txt_login_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_no_account"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>